[gd_scene load_steps=80 format=2]

[ext_resource path="res://World/Actor/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://World/Actor/Player/Sprite.gd" type="Script" id=2]
[ext_resource path="res://World/Actor/Sprite/Shadow.png" type="Texture" id=3]
[ext_resource path="res://World/Actor/Weapon/Weapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Actor/Monster/SndDeath.wav" type="AudioStream" id=6]
[ext_resource path="res://World/Actor/Player/Finn/Finn_rpg.png" type="Texture" id=7]
[ext_resource path="res://World/Actor/Player/Finn/Finn_rpg_run-Sheet.png" type="Texture" id=8]
[ext_resource path="res://World/Actor/Player/Finn/Finn_rpg_run_L-Sheet.png" type="Texture" id=9]
[ext_resource path="res://World/Actor/Player/Finn/Finn_Up_Run.png" type="Texture" id=10]
[ext_resource path="res://World/Actor/Player/Finn/Finn_Down_Run.png" type="Texture" id=11]
[ext_resource path="res://World/Actor/Player/Finn/Finn_rpg_L2.png" type="Texture" id=12]
[ext_resource path="res://World/Actor/Player/Finn/Finn_Up_Q.png" type="Texture" id=13]
[ext_resource path="res://World/Actor/Player/Finn/Finn_Down_Q.png" type="Texture" id=14]
[ext_resource path="res://World/Actor/Player/Finn/Finn_Atack.png" type="Texture" id=15]

[sub_resource type="StreamTexture" id=98]
load_path = "res://.import/Finn_Atack.png-6240c1575d3aca9f3fca2883482aae70.stex"

[sub_resource type="AtlasTexture" id=94]
atlas = SubResource( 98 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=95]
atlas = SubResource( 98 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=96]
atlas = SubResource( 98 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=97]
atlas = SubResource( 98 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 14 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 14 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 12 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 13 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 94 ) ],
"loop": true,
"name": "AttackD",
"speed": 5.0
}, {
"frames": [ SubResource( 95 ) ],
"loop": true,
"name": "AttackL",
"speed": 5.0
}, {
"frames": [ SubResource( 96 ) ],
"loop": true,
"name": "AttackR",
"speed": 5.0
}, {
"frames": [ SubResource( 97 ) ],
"loop": true,
"name": "AttackU",
"speed": 5.0
}, {
"frames": [ SubResource( 99 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "IdleD",
"speed": 6.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "IdleL",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "IdleR",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ) ],
"loop": true,
"name": "IdleU",
"speed": 6.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": true,
"name": "WalkD",
"speed": 6.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "WalkL",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "WalkR",
"speed": 10.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "WalkU",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 5, 4 )

[sub_resource type="RectangleShape2D" id=100]
extents = Vector2( 5.5, 5.5 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 4
collision_mask = 17
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, 7 )
texture = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 5.96046e-08 )
scale = Vector2( 0.6875, 0.589286 )
frames = SubResource( 26 )
animation = "Death"
playing = true
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="ActionTime" type="Timer" parent="Sprite"]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 27 )

[node name="Weapon" parent="." instance=ExtResource( 5 )]
position = Vector2( -1, 1 )
scale = Vector2( 0.833333, 0.833333 )

[node name="SndHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="HandPosition" type="Position2D" parent="."]
position = Vector2( 4, 4 )

[node name="ItemSprite" type="Sprite" parent="HandPosition"]

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2( -5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 4.5, 4.5 )
shape = SubResource( 100 )

[node name="InteractionLabel" type="Label" parent="InteractionArea"]
margin_left = -15.0
margin_top = -23.0
margin_right = 25.0
margin_bottom = -9.0

[connection signal="action_pressed" from="." to="Sprite" method="action_started"]
[connection signal="action_pressed" from="." to="Weapon" method="on_attack"]
[connection signal="change_direction" from="." to="Sprite" method="_on_change_direction"]
[connection signal="change_direction" from="." to="Weapon" method="_on_change_direction"]
[connection signal="velocity_changed" from="." to="Sprite" method="_on_velocity_changed"]
[connection signal="timeout" from="Sprite/ActionTime" to="." method="_on_ActionTime_timeout"]
[connection signal="timeout" from="Sprite/ActionTime" to="Sprite" method="_on_ActionTime_timeout"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
